[package]
name = "yas-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
yas = { path = "../yas", package = "yas_core" }
yas_genshin = { path = "../yas-genshin", package = "yas_scanner_genshin" }
yas_starrail = { path = "../yas-starrail", package = "yas_scanner_starrail" }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.24"

[build-dependencies]
winres = "0.1"


[[bin]]
name = "lock_artifact"
path = "src/lock_artifact.rs"

[[bin]]
name = "lock_relic"
path = "src/lock_relic.rs"
